Fixes a minor problem with screen width on small screen

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,7 +30,7 @@ body {
  */
 
  main {
-   width: 100%;
+   width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
